--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2018"
 [dependencies]
 byteorder = "1.3.4"
 clap = {version = "2.33.1", features = ["yaml"]}
-hashbrown = {version = "0.9.1", features = ["rayon"]}
 hematite-nbt = "0.5.0"
-log = "0.4.11"
+indicatif = "0.15.0"
+lazy_static = "1.4.0"
 nom = "5.1.2"
-rayon = "1.5.0"
-serde = "1.0.117"
 serde_json = "1.0.59"
-simplelog = "0.8.0"
