--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,25 @@
 [package]
-name = "map_craft"
+name = "minecator"
 version = "0.1.0"
 authors = ["Eric Mikulin <ericm99@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-byteorder = "1.3.4"
-clap = {version = "2.33.1", features = ["yaml"]}
-hashbrown = {version = "0.9.1", features = ["rayon"]}
-hematite-nbt = "0.5.0"
-indicatif = "0.15.0"
-lazy_static = "1.4.0"
-log = "0.4.11"
-nom = "5.1.2"
-rayon = "1.5.0"
-serde_json = "1.0.59"
-simplelog = "0.8.0"
+byteorder = "1.3"
+clap = {version = "2.33", features = ["yaml"]}
+futures = "0.3"
+hashbrown = {version = "0.9", features = ["rayon"]}
+hematite-nbt = "0.5"
+indicatif = "0.15"
+lazy_static = "1.4"
+log = "0.4"
+nom = "5.1"
+png = "0.16"
+rayon = "1.5"
+serde_json = "1.0"
+simplelog = "0.8"
+# wgpu-subscriber = "0.1"
+
+[dependencies.wgpu]
+version = "0.6"
+features = ["vulkan-portability"]
