--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,20 +6,21 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.3"
+cgmath = "0.17.0"
 clap = {version = "2.33", features = ["yaml"]}
 futures = "0.3"
+glfw = "0.40"
 hashbrown = {version = "0.9", features = ["rayon"]}
 hematite-nbt = "0.5"
 indicatif = "0.15"
 lazy_static = "1.4"
 log = "0.4"
+luminance = "0.43"
+luminance-derive = "0.6"
+luminance-glfw = "0.14"
+luminance-windowing = "0.9"
 nom = "5.1"
 png = "0.16"
 rayon = "1.5"
 serde_json = "1.0"
 simplelog = "0.8"
-# wgpu-subscriber = "0.1"
-
-[dependencies.wgpu]
-version = "0.6"
-features = ["vulkan-portability"]
