--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,20 +5,17 @@ authors = ["Eric Mikulin <ericm99@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+bitvec = "0.19"
 byteorder = "1.3"
-cgmath = "0.17.0"
 clap = {version = "2.33", features = ["yaml"]}
 futures = "0.3"
-glfw = "0.40"
 hashbrown = {version = "0.9", features = ["rayon"]}
 hematite-nbt = "0.5"
 indicatif = "0.15"
+kiss3d = "0.27"
 lazy_static = "1.4"
 log = "0.4"
-luminance = "0.43"
-luminance-derive = "0.6"
-luminance-glfw = "0.14"
-luminance-windowing = "0.9"
+nalgebra = "0.23"
 nom = "5.1"
 png = "0.16"
 rayon = "1.5"
