--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ bitvec = "0.19"
 byteorder = "1.3"
 clap = {version = "2.33", features = ["yaml"]}
 futures = "0.3"
-hashbrown = {version = "0.9", features = ["rayon"]}
+hashbrown = {version = "0.9", features = ["rayon", "serde"]}
 hematite-nbt = "0.5"
 indicatif = "0.15"
 kiss3d = "0.27"
@@ -21,3 +21,4 @@ png = "0.16"
 rayon = "1.5"
 serde_json = "1.0"
 simplelog = "0.8"
+serde = "1.0"
